# third_party_icu

./: .gitattributes  123.txt  BUILD.gn  CMakeLists.txt  OAT.xml  README.OpenSource  README.en.md  README.md  bundle.json  data_filter.json  icu.gni
icu4c/source/: BUILD.gn  README.OpenSource
icu4c/source/common/: BUILD.gn  locid.cpp  loclikely.cpp  loclikelysubtags.cpp  loclikelysubtags.h  locmap.cpp  locresdata.cpp  lsr.cpp  lsr.h  lstmbe.cpp  uchar_props_data.h  ucnv_u8.cpp  ucurr.cpp  udata.cpp  uloc_tag.cpp  umapfile.cpp  unistr.cpp  uresbund.cpp  uvector.cpp  uvector.h
icu4c/source/common/unicode/: locid.h  uconfig.h  udata.h  umachine.h  utypes.h  uvernum.h
icu4c/source/data/: BUILDRULES.py  icu-coll-deprecates.xml
icu4c/source/data/brkitr/: de.txt  el.txt  en.txt  en_US.txt  en_US_POSIX.txt  es.txt  fi.txt  fr.txt  it.txt  ja.txt  ko.txt  pt.txt  root.txt  ru.txt  sv.txt  zh.txt  zh_Hant.txt
icu4c/source/data/coll/: LOCALE_DEPS.json  af.txt  am.txt  ar.txt  as.txt  az.txt  be.txt  bg.txt  bn.txt  bo.txt  br.txt  bs.txt  bs_Cyrl.txt  ca.txt  ceb.txt  chr.txt  cs.txt  cy.txt  da.txt  de.txt  de_AT.txt  dsb.txt  dz.txt  ee.txt  el.txt  en.txt  en_US_POSIX.txt  eo.txt  es.txt  et.txt  fa.txt  fa_AF.txt  ff_Adlm.txt  fi.txt  fil.txt  fo.txt  fr.txt  fr_CA.txt  fy.txt  ga.txt  (+93 more)
icu4c/source/data/curr/: af.txt  af_NA.txt  agq.txt  ak.txt  am.txt  ar.txt  ar_AE.txt  ar_DJ.txt  ar_ER.txt  ar_KM.txt  ar_LB.txt  ar_SO.txt  ar_SS.txt  as.txt  asa.txt  ast.txt  az.txt  az_Cyrl.txt  az_Latn_AZ.txt  bas.txt  be.txt  bem.txt  bez.txt  bg.txt  bgc.txt  blo.txt  bm.txt  bn.txt  bn_IN.txt  bo.txt  bo_IN.txt  br.txt  brx.txt  bs.txt  bs_Cyrl.txt  ca.txt  ca_FR.txt  ccp.txt  ce.txt  ceb.txt  (+434 more)
icu4c/source/data/in/: nfc.nrm  unames.icu  uprops.icu  uts46.nrm
icu4c/source/data/lang/: af.txt  agq.txt  ak.txt  am.txt  ar.txt  ar_EG.txt  ar_LY.txt  ar_SA.txt  ar_XB.txt  as.txt  asa.txt  ast.txt  az.txt  az_Cyrl.txt  bas.txt  be.txt  bem.txt  bez.txt  bg.txt  bgc.txt  bho.txt  blo.txt  bm.txt  bn.txt  bn_IN.txt  bo.txt  br.txt  brx.txt  bs.txt  bs_Cyrl.txt  ca.txt  ccp.txt  ce.txt  ceb.txt  cgg.txt  chr.txt  ckb.txt  cs.txt  csw.txt  cv.txt  (+314 more)
icu4c/source/data/locales/: af.txt  af_NA.txt  af_ZA.txt  agq.txt  agq_CM.txt  ak.txt  ak_GH.txt  am.txt  am_ET.txt  ar.txt  ar_001.txt  ar_AE.txt  ar_BH.txt  ar_DJ.txt  ar_DZ.txt  ar_EG.txt  ar_EH.txt  ar_ER.txt  ar_IL.txt  ar_IQ.txt  ar_JO.txt  ar_KM.txt  ar_KW.txt  ar_LB.txt  ar_LY.txt  ar_MA.txt  ar_MR.txt  ar_OM.txt  ar_PS.txt  ar_QA.txt  ar_SA.txt  ar_SD.txt  ar_SO.txt  ar_SS.txt  ar_SY.txt  ar_TD.txt  ar_TN.txt  ar_XB.txt  ar_YE.txt  as.txt  (+792 more)
icu4c/source/data/mappings/: convrtrs.txt
icu4c/source/data/misc/: dayPeriods.txt  genderList.txt  grammaticalFeatures.txt  icuver.txt  keyTypeData.txt  langInfo.txt  likelySubtags.txt  metaZones.txt  metadata.txt  numberingSystems.txt  pluralRanges.txt  plurals.txt  supplementalData.txt  timezoneTypes.txt  units.txt  windowsZones.txt  zoneinfo64.txt
icu4c/source/data/rbnf/: af.txt  ak.txt  am.txt  ar.txt  ars.txt  az.txt  be.txt  bg.txt  bs.txt  ca.txt  ccp.txt  chr.txt  cs.txt  cy.txt  da.txt  de.txt  de_CH.txt  ee.txt  el.txt  en.txt  en_001.txt  en_IN.txt  eo.txt  es.txt  es_419.txt  es_DO.txt  es_MX.txt  es_PR.txt  es_US.txt  et.txt  fa.txt  fa_AF.txt  ff.txt  fi.txt  fil.txt  fo.txt  fr.txt  fr_BE.txt  fr_CH.txt  ga.txt  (+56 more)
icu4c/source/data/region/: af.txt  agq.txt  ak.txt  am.txt  ar.txt  ar_AE.txt  ar_LY.txt  ar_SA.txt  ar_XB.txt  as.txt  asa.txt  ast.txt  az.txt  az_Cyrl.txt  az_Latn.txt  bas.txt  be.txt  bem.txt  bez.txt  bg.txt  bgc.txt  bho.txt  blo.txt  bm.txt  bn.txt  bn_IN.txt  bo.txt  bo_IN.txt  br.txt  brx.txt  bs.txt  bs_Cyrl.txt  bs_Latn.txt  bs_Latn_BA.txt  ca.txt  ccp.txt  ce.txt  ceb.txt  cgg.txt  chr.txt  (+312 more)
icu4c/source/data/translit/: Any_Accents.txt  Any_Publishing.txt  Arab_Latn.txt  Beng_Arab.txt  Beng_Deva.txt  Beng_Gujr.txt  Beng_Guru.txt  Beng_Knda.txt  Beng_Latn.txt  Beng_Mlym.txt  Beng_Orya.txt  Beng_Taml.txt  Beng_Telu.txt  Beng_ur.txt  Bengali_InterIndic.txt  Cyrl_Latn.txt  Deva_Arab.txt  Deva_Beng.txt  Deva_Gujr.txt  Deva_Guru.txt  Deva_Knda.txt  Deva_Latn.txt  Deva_Mlym.txt  Deva_Orya.txt  Deva_Taml.txt  Deva_Telu.txt  Deva_ur.txt  Devanagari_InterIndic.txt  Ethi_Cyrl_Gutgarts.txt  Ethi_Latn.txt  Ethi_Latn_ALALOC.txt  Ethi_Latn_ALALOC_Geminate.txt  Ethi_Latn_Aethiopi.txt  Ethi_Latn_Aethiopi_Geminate.txt  Ethi_Latn_Beta_Metsehaf.txt  Ethi_Latn_Beta_Metsehaf_Geminate.txt  Ethi_Latn_ES3842.txt  Ethi_Latn_IES_JES_1964.txt  Ethi_Latn_IES_JES_1964_Geminate.txt  Ethi_Latn_Lambdin.txt  (+335 more)
icu4c/source/data/unidata/: DerivedCoreProperties.txt  FractionalUCA.txt  UCARules.txt  UnicodeData.txt  changes.txt  confusables.txt  ppucd.txt
icu4c/source/data/unit/: af.txt  ak.txt  am.txt  ar.txt  ar_SA.txt  as.txt  ast.txt  az.txt  az_AZ.txt  az_Cyrl.txt  bas.txt  be.txt  bg.txt  bho.txt  blo.txt  bm.txt  bn.txt  bn_IN.txt  bo.txt  br.txt  brx.txt  bs.txt  bs_Cyrl.txt  ca.txt  ccp.txt  ce.txt  ceb.txt  chr.txt  ckb.txt  cs.txt  csw.txt  cv.txt  cy.txt  da.txt  de.txt  de_CH.txt  dje.txt  doi.txt  dsb.txt  dyo.txt  (+255 more)
icu4c/source/data/zone/: af.txt  agq.txt  am.txt  ar.txt  ar_SA.txt  as.txt  asa.txt  ast.txt  az.txt  be.txt  bem.txt  bez.txt  bg.txt  bgc.txt  bho.txt  blo.txt  bn.txt  bo.txt  br.txt  brx.txt  bs.txt  bs_BA.txt  bs_Cyrl.txt  ca.txt  ccp.txt  ce.txt  ceb.txt  cgg.txt  chr.txt  ckb.txt  (+293 more)
icu4c/source/i18n/: calendar.cpp  chnsecal.cpp  collationruleparser.cpp  dtitvinf.cpp  dtptngen.cpp  measunit.cpp  plurrule.cpp  reldatefmt.cpp  rulebasedcollator.cpp  tzgnames.cpp  tznames_impl.cpp  ucol_sit.cpp  windtfmt.cpp  winnmfmt.cpp
icu4c/source/ohos/: distro_tzdata_loader.cpp  distro_tzdata_loader.h  init_data.cpp  init_data.h  lunar_calendar.cpp  lunar_calendar.h
ohos_icu4c/: BUILD.gn  libicu.map
ohos_icu4c/build_data/: ohos_data.py  pkgdata.sh
ohos_icu4c/build_data/full/: config.json  data_filter.json
ohos_icu4c/build_data/lite/: config.json  data_filter.json
ohos_icu4c/mount/: icu72_dat_diff.cpp  icu72_dat_mount.cpp
ohos_icu4c/src/: icu_addon.cpp  icu_native.cpp
(+477 files in other folders)
