# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")
import("//third_party/icu/icu.gni")

ohos_shared_library("icundk") {
  ldflags = [
    "-shared",
    "-lm",
  ]
  configs = [
    "//third_party/icu/icu4c:icu_config",
    "//build/config/compiler:rtti",
  ]
  include_dirs = [ "//third_party/icu/icu4c/source/common" ]

  sources = [ "src/icu_addon.cpp" ]

  deps = [
    "//third_party/icu/icu4c:shared_icui18n",
    "//third_party/icu/icu4c:shared_icuuc",
  ]
  external_deps = []
  defines = []
  if (icu_support_libbegetutil && is_ohos) {
    defines += [ "ICU_SUPPORT_LIBBEGETUTIL" ]
    external_deps += [ "init:libbegetutil" ]
  }

  version_script = "libicu.map"
  output_name = "icu"
  output_extension = "so"
  relative_install_dir = "ndk"
  subsystem_name = "thirdparty"
  part_name = "icu"
}
