# Copyright (c) 2020-2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#     http://www.apache.org/licenses/LICENSE-2.0
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
if (defined(ohos_lite)) {
  import("//build/lite/config/component/lite_component.gni")
} else {
  import("//build/ohos.gni")
}

config("icu_config") {
  include_dirs = [ "//third_party/icu/icu4c/source/common" ]
}

icu_source = [
  "//third_party/icu/icu4c/source/common/cmemory.cpp",
  "//third_party/icu/icu4c/source/common/cstring.cpp",
  "//third_party/icu/icu4c/source/common/ubidi.cpp",
  "//third_party/icu/icu4c/source/common/ubidiln.cpp",
  "//third_party/icu/icu4c/source/common/ubidiwrt.cpp",
  "//third_party/icu/icu4c/source/common/ubidi_props.cpp",
  "//third_party/icu/icu4c/source/common/uchar.cpp",
  "//third_party/icu/icu4c/source/common/udataswp.cpp",
  "//third_party/icu/icu4c/source/common/uinvchar.cpp",
  "//third_party/icu/icu4c/source/common/ustring.cpp",
  "//third_party/icu/icu4c/source/common/utf_impl.cpp",
  "//third_party/icu/icu4c/source/common/utrie2.cpp",
]

if (defined(ohos_lite)) {
  lite_library("icu_font") {
    target_type = "shared_library"
    sources = icu_source
    public_configs = [ ":icu_config" ]
  }
} else {
  ohos_static_library("icu_font") {
    sources = icu_source
    include_dirs = [ "src\base" ]
    public_configs = [ ":icu_config" ]
  }
}